# Manajemen_Perpustakaan_Python

./: .gitignore  BUILD.md  README.md  main_app.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
library_system/config/: settings.py
library_system/database/: db.py
library_system/managers/: settings_manager.py
library_system/models/: book_model.py  loan_model.py  member_model.py
library_system/pages/: base_page.py  books_page.py  dashboard_page.py  loans_page.py  members_page.py  reports_page.py  settings_page.py
library_system/services/: book_service.py  dashboard_service.py  loan_service.py  member_service.py  report_service.py
library_system/ui/: add_book_dialog.py  dark.qss  delegates.py  light.qss  loan_dialog.py  main_window.py  member_dialog.py  sidebar.py  theme_manager.py
library_system/utils/: export_utils.py  paths.py
